<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<TableLayout
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_column="0"
				    android:layout_weight="1">
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">
						<TextView  
							android:id="@+id/Enable"
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/enableSensor"/>
					</TableRow>    
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">	
						<CheckBox
							android:layout_height="wrap_content"
							android:id="@+id/chkGyro">
						</CheckBox>
					</TableRow>
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">	
						<CheckBox
							android:layout_height="wrap_content"
							android:id="@+id/chkAccl">
						</CheckBox>
					</TableRow>				
				</TableLayout>
		
		
				<TableLayout
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_column="1"
				    android:layout_weight="2">
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">
						<TextView  
							android:id="@+id/SensorGroup"
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/sensorcaption"/>
					</TableRow>
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">
						<RadioGroup
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" 
							android:id="@+id/RdGpSensor">
							<RadioButton
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/RdSensor_Gyro"
								android:text="@string/gyro">
							</RadioButton>
							<RadioButton
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/RdSensor_Accl"
								android:text="@string/accl">
							</RadioButton>
						</RadioGroup>
					</TableRow>
				</TableLayout>
		
				<TableLayout
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_column="2"
				    android:layout_weight="2">
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">
						<TextView  
							android:id="@+id/DelayMode"
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/delaymodecaption"/>
					</TableRow>
					<TableRow
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content">
						<RadioGroup
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" 
							android:id="@+id/RdGpSensorMode">
							<RadioButton
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/RdSensorMode_Game"
								android:text="@string/game">
							</RadioButton>
							<RadioButton
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/RdSensorMode_UI"
								android:text="@string/ui">
							</RadioButton>
						</RadioGroup>
					</TableRow>
				</TableLayout>
			</TableRow>
		</TableLayout>

		<TableLayout 		    
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
		   	<TableRow
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content">
				<CheckBox
					android:layout_height="wrap_content"
					android:id="@+id/chkAudio"
			    	android:layout_column="0"
			    	android:layout_weight="50"     
					android:text="@string/audio">
				</CheckBox>
		   	    <CheckBox
					android:layout_height="wrap_content"
					android:id="@+id/chkVideo"
			    	android:layout_column="1"
			    	android:layout_weight="50"     
					android:text="@string/video">
				</CheckBox>
				<SurfaceView
   					android:id="@+id/surface_camera"
    				android:layout_width="16px"
    				android:layout_height="9px"
			    	android:layout_column="2"
			    	android:layout_weight="1">
				</SurfaceView>	 	
			</TableRow>
		</TableLayout>
						
		<TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
				    android:layout_column="0"
				    android:layout_weight="1"     
				    android:text="@string/fileinterval"/>
				<Spinner
					android:id="@+id/spnSelectFileInterval"
				    android:layout_width="wrap_content"     
				    android:layout_height="wrap_content"
				    android:layout_column="1"
				    android:layout_weight="1"/>
			</TableRow>
		</TableLayout>
			
		<TextView  
			android:id="@+id/ShowInfo"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text=""/>
		<Button android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/Record"
				android:text=""/>	
		<TextView  
			android:id="@+id/ShowRecord"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text=""
		    />
	</LinearLayout>
</ScrollView>
